# miniCAT

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
minicat/: functional_groups_class.py  main.py
