[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "miniCAT"
version = "0.1.0"
description = "Lightweight compound attachment tool for nanocrystals"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Ivan Infante"}]
license = {file = "LICENSE"}
# Dependencies specify minimal versions known to work well with RDKit + ASE workflows.
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "ase>=3.22.1",
    "rdkit>=2022.09.1",
]

[project.urls]
Homepage = "https://github.com/nlesc-nano/miniCAT"

[project.scripts]
miniCAT = "minicat.main:main"
